fixed entity movement being buggy at different speeds due to over or under shoot of the center
Implemented the new object management in the layered list format

moved generation of default map into the map class