@@ -1,6 +1,7 @@
 package kn.uni.games.classic.pacman.game.internal;
 
 import kn.uni.PacPhi;
+import kn.uni.games.classic.pacman.game.entities.Entity;
 import kn.uni.games.classic.pacman.game.entities.Spawner;
 import kn.uni.games.classic.pacman.game.internal.graphics.AdvTicking;
 import kn.uni.games.classic.pacman.game.internal.graphics.GameDisplay;
@@ -8,8 +9,8 @@ import kn.uni.games.classic.pacman.game.internal.graphics.GameLayer;
 import kn.uni.games.classic.pacman.game.internal.objects.AdvGameObject;
 import kn.uni.games.classic.pacman.game.internal.tracker.AdvGameConst;
 import kn.uni.games.classic.pacman.game.internal.tracker.AdvGameState;
+import kn.uni.games.classic.pacman.game.items.Item;
 import kn.uni.games.classic.pacman.game.items.PelletItem;
-import kn.uni.games.classic.pacman.game.map.AdvPacManMap;
 import kn.uni.games.classic.pacman.screens.AdvGameScreen;
 import kn.uni.util.Direction;
 import kn.uni.util.PrettyPrint;
@@ -17,6 +18,7 @@ import kn.uni.util.PrettyPrint;
 import javax.swing.JPanel;
 import java.awt.Dimension;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 import java.util.stream.IntStream;
 
@@ -78,274 +80,6 @@ public class GameEnvironment
   //endregion
 
   //region control game status
-  //  public void start ()
-  //  {
-  //    boolean running = true;
-  //    gameState.paused = false;
-  //
-  //    gameState.currentTick = 0;
-  //    gameState.lastTickTime = System.nanoTime();
-  //    //optimal tickduration in nanoseconds
-  //    double            prefTickDuration = 1_000_000_000.0 / gameState.tps;
-  //    LinkedList <Long> times            = new LinkedList <>();
-  //
-  //    Thread oldClock = new Thread(() ->
-  //    {
-  //      while (running)
-  //      {
-  //        if (!gameState.paused)
-  //        {
-  //          long t = System.nanoTime();
-  //          if (t - gameState.lastTickTime < prefTickDuration) continue;
-  //          gameState.currentTick++;
-  //
-  //          double buffer = round(( t - gameState.lastTickTime ) / 1_000_000.0);
-  //
-  //          gameState.lastTickTime = t;
-  //
-  //          times.push(gameState.lastTickTime);
-  //          List <Long> l = times.stream().limit(gameState.tps + 1).toList();
-  //          times.clear();
-  //          times.addAll(l);
-  //          double d = times.getFirst() - times.getLast();
-  //
-  //          gameState.layers.forEach(layer ->
-  //              layer.stream()
-  //                   .filter(gameObject -> gameObject instanceof AdvTicking)
-  //                   .forEach(gameObject -> ( (AdvTicking) gameObject ).tick()));
-  //
-  //          //          //reRender layers if needed
-  //          //          if (gameState.currentTick % 2 == 0)
-  //          //          {
-  //          //            IntStream.range(0, AdvGameState.Layer.values().length).filter(i -> updateLayer.get(i)).forEach((i) ->
-  //          //            {
-  //          //              update(i);
-  //          //              updateLayer.set(i, false);
-  //          //            });
-  //          //          }
-  //          //
-  //          //          //render final image
-  //          //          if (gameState.currentTick % 2 == 0)
-  //          //          {
-  //          //            display.repaint();
-  //          //          }
-  //
-  //          System.out.println("Time/Tps " + d / 1_000_000_000.0 + " | " + "Time per Tick " + buffer + "ms");
-  //        }
-  //      }
-  //
-  //    });
-  //
-  //    Thread ticker = new Thread(() ->
-  //    {
-  //      //      boolean running = true;
-  //      boolean paused = false;
-  //
-  //      long tick              = 0;
-  //      long lastTickTime      = System.nanoTime();
-  //      long prefTickDuration2 = 1_000_000_000 / gameState.tps; //in ns, at 120 tps: 8_333_333ns
-  //
-  //      while (running)
-  //      {
-  //        if (!paused)
-  //        {
-  //          //region calculate stats and wait for next tick
-  //          //time of current tick
-  //          long currentTickTime = System.nanoTime();
-  //          //duration since last successful tick
-  //          long timeSinceLastTick = currentTickTime - lastTickTime;
-  //
-  //          if (timeSinceLastTick < prefTickDuration)
-  //          {
-  //            double buffer = round(( prefTickDuration - timeSinceLastTick ) / 1_000_000.0);
-  //            int    ms     = (int) buffer;
-  //            int    ns     = (int) ( ( buffer - ms ) * 1_000_000 );
-  //            System.out.println("last Tick took: " + timeSinceLastTick + "ns | " + "Sleeping for " + ms + "ms" + " " + ns + "ns");
-  //            try
-  //            {
-  //              Thread.sleep(ms, ns);
-  //            }
-  //            catch (InterruptedException e)
-  //            {
-  //              throw new RuntimeException(e);
-  //            }
-  //          }
-  //          //endregion
-  //
-  //          //region tick
-  //
-  //          //          //tick all objects
-  //          //          gameState.layers.forEach(layer ->
-  //          //              layer.stream()
-  //          //                   .filter(gameObject -> gameObject instanceof AdvTicking)
-  //          //                   .forEach(gameObject -> ( (AdvTicking) gameObject ).tick()));
-  //          //
-  //          //          //reRender layers if needed
-  //          //          IntStream.range(0, 6).filter(i -> updateLayer.get(i)).forEach((i) ->
-  //          //          {
-  //          //            update(i);
-  //          //            updateLayer.set(i, false);
-  //          //          });
-  //          //
-  //          //          //render final image
-  //          //          if (gameState.currentTick % 2 == 0)
-  //          //          {
-  //          //            render();
-  //          //            display.setFinalImg(finalImg);
-  //          //            display.repaint();
-  //          //          }
-  //
-  //          //endregion
-  //
-  //
-  //          tick += 1;
-  //          lastTickTime = currentTickTime;
-  //        }
-  //      }
-  //
-  //    });
-  //
-  //    int a = 0;
-  //
-  //    Thread tickerRestructure = new Thread(() ->
-  //    {
-  //      //      boolean running           = true;
-  //      boolean paused            = false;
-  //      double  prefTickDuration2 = ( 1_000_000_000.0 / gameState.tps ) / 1_000_000.0; //in ms, at 120 tps: 8_333_333ns
-  //
-  //      long tick = 0;
-  //
-  //      long   tickStart    = System.nanoTime();
-  //      long   tickEnd      = System.nanoTime();
-  //      double tickDuration = 0;
-  //
-  //      long   workStart    = System.nanoTime();
-  //      long   workEnd      = System.nanoTime();
-  //      double workDuration = 0;
-  //
-  //      double sleepDuration = 0;
-  //
-  //      while (running)
-  //      {
-  //        if (!paused)
-  //        {
-  //          tickDuration = round(( tickEnd - tickStart ) / 1_000_000.0); //duration of last tick in ms
-  //          System.out.println("Tick " + tick + ": last tick took: " + tickDuration + "ms | " + "Work took: " + workDuration + "ms" + " | " + "Sleeping: " + sleepDuration + "ms");
-  //          tickStart = System.nanoTime();
-  //
-  //          workStart = System.nanoTime();
-  //          //region tick
-  //
-  //          //          loop();
-  //          //
-  //          //          if (tick == 250)
-  //          //          {
-  //          //            AdvPacManMap map = (AdvPacManMap) gameState.layers.get(1).getFirst();
-  //          //            map.spawnables.stream()
-  //          //                          .filter(obj -> obj instanceof Spawner)
-  //          //                          .map(obj -> (Spawner) obj)
-  //          //                          .filter(spawner -> spawner.name.equals("PlayerSpawn"))
-  //          //                          .forEach(Spawner::spawn);
-  //          //          }
-  //
-  //          //endregion
-  //          workEnd = System.nanoTime();
-  //
-  //          workDuration = round(( workEnd - workStart ) / 1_000_000.0);
-  //          sleepDuration = round(( prefTickDuration2 - workDuration ));
-  //
-  //          if (workDuration < prefTickDuration2)
-  //          {
-  //            int ms = (int) sleepDuration;
-  //            int ns = (int) ( ( sleepDuration - ms ) * 1_000_000 );
-  //            try
-  //            {
-  //              Thread.sleep(1);
-  //            }
-  //            catch (InterruptedException e)
-  //            {
-  //              throw new RuntimeException(e);
-  //            }
-  //          }
-  //
-  //          tick += 1;
-  //
-  //          tickEnd = System.nanoTime();
-  //        }
-  //      }
-  //
-  //    });
-  //
-  //    int b = 0;
-  //    //    Thread online = new Thread(() ->
-  //    //    {
-  //    //      int TPS = 120, FPS = 60;
-  //    //      //      boolean running = true;
-  //    //      boolean paused = false;
-  //    //
-  //    //      long         initialTime = System.nanoTime();
-  //    //      final double timeU       = 1000000000. / TPS;
-  //    //      final double timeF       = 1000000000. / FPS;
-  //    //      double       deltaU      = 0, deltaF = 0;
-  //    //      int          frames      = 0, ticks = 0;
-  //    //      long         timer       = System.currentTimeMillis();
-  //    //
-  //    //      while (running)
-  //    //      {
-  //    //
-  //    //        long currentTime = System.nanoTime();
-  //    //        deltaU += ( currentTime - initialTime ) / timeU;
-  //    //        deltaF += ( currentTime - initialTime ) / timeF;
-  //    //        initialTime = currentTime;
-  //    //
-  //    //        if (deltaU >= 1)
-  //    //        {
-  //    //          //        getInput();
-  //    //          //        update();
-  //    //          ticks++;
-  //    //          deltaU--;
-  //    //        }
-  //    //
-  //    //        if (deltaF >= 1)
-  //    //        {
-  //    //          render();
-  //    //          frames++;
-  //    //          deltaF--;
-  //    //        }
-  //    //
-  //    //        if (System.currentTimeMillis() - timer > 1000)
-  //    //        {
-  //    //
-  //    //          System.out.println(String.format("UPS: %s, FPS: %s", ticks, frames));
-  //    //
-  //    //          frames = 0;
-  //    //          ticks = 0;
-  //    //          timer += 1000;
-  //    //        }
-  //    //      }
-  //    //    });
-  //
-  //
-  //    //    ScheduledExecutorService scheduler = Executors.newScheduledThreadPool(1);
-  //    //
-  //    //    Runnable beeper = new Runnable()
-  //    //    {
-  //    //      public void run ()
-  //    //      {
-  //    //        System.out.println("beep");
-  //    //      }
-  //    //    };
-  //
-  //    //    final ScheduledFuture <?> beeperHandle = scheduler.scheduleAtFixedRate(loop, 2L, (long) prefTickDuration, NANOSECONDS);
-  //
-  //    //    scheduler.schedule(new Runnable()
-  //    //    {
-  //    //      public void run () { beeperHandle.cancel(true); }
-  //    //    }, 10, SECONDS);
-  //
-  //    //    tickerRestructure.start();
-  //  }
-
   public void startGame ()
   {
     gameState.running = true;
@@ -392,15 +126,14 @@ public class GameEnvironment
     ticker = () ->
     {
       //tick all objects
-      gameState.layers.forEach(layer ->
-          layer.stream()
+      IntStream.range(0, gameState.objects.list.size()-1)
+               .mapToObj(i -> gameState.objects.list.get(i))
                .filter(gameObject -> gameObject instanceof AdvTicking)
                .map(obj -> (AdvGameObject) obj)
                .filter(obj -> !obj.frozen)
-               .forEach(gameObject -> ( (AdvTicking) gameObject ).tick()));
+               .forEachOrdered(gameObject -> ( (AdvTicking) gameObject ).tick());
 
-
-      gameState.time += 8_333_333;
+      gameState.time += (long) prefTickDuration;
       gameScreen.setTime((long) ( gameState.time / 1_000_000.0 ));
     };
 
@@ -547,9 +280,9 @@ public class GameEnvironment
     }).start();
   }
 
-  public void reloadLevel()
+  public void reloadLevel ()
   {
-    if(!gameState.running) return;
+    if (!gameState.running) return;
 
     pauseGameIn(1000, () ->
     {
@@ -573,38 +306,45 @@ public class GameEnvironment
   //region loaders
   public void loadObjects ()
   {
-    gameState.layers.get(AdvGameState.Layer.OBJECTS.ordinal()).addAll(( (AdvPacManMap) gameState.layers.get(AdvGameState.Layer.MAP.ordinal()).getFirst() ).generateObjects());
+    Collection <AdvGameObject> objects = gameState.objects.maps().get(0).generateObjects();
+
+    objects.forEach(object -> gameState.objects.add(AdvGameState.Layer.OBJECTS, object));
   }
 
   public void loadItems ()
   {
-    gameState.layers.get(AdvGameState.Layer.ITEMS.ordinal()).addAll(( (AdvPacManMap) gameState.layers.get(AdvGameState.Layer.MAP.ordinal()).getFirst() ).generateItems());
-    gameState.pelletCount = (int) gameState.layers.get(AdvGameState.Layer.ITEMS.ordinal()).stream()
-                                                  .filter(item -> item instanceof PelletItem)
-                                                  .count();
+    Collection <Item> items = gameState.objects.maps().get(0).generateItems();
+
+    items.forEach(item -> gameState.objects.add(AdvGameState.Layer.ITEMS, item));
+
+    gameState.pelletCount = (int) items.stream()
+                                       .filter(item -> item instanceof PelletItem)
+                                       .count();
   }
 
   public void loadEntities ()
   {
-    gameState.layers.get(AdvGameState.Layer.ENTITIES.ordinal()).addAll(( (AdvPacManMap) gameState.layers.get(AdvGameState.Layer.MAP.ordinal()).getFirst() ).generateEntities());
+    Collection <Entity> entities = gameState.objects.maps().get(0).generateEntities();
+
+    entities.forEach(entity -> gameState.objects.add(AdvGameState.Layer.ENTITIES, entity));
   }
 
   public void spawnPlayers ()
   {
-    gameState.layers.get(AdvGameState.Layer.ENTITIES.ordinal()).stream()
-                    .filter(obj -> obj instanceof Spawner)
-                    .map(obj -> (Spawner) obj)
-                    .filter(spawner -> spawner.name.equals("PlayerSpawn"))
-                    .forEach(Spawner::spawn);
+    gameState.objects.entities().stream()
+                     .filter(obj -> obj instanceof Spawner)
+                     .map(obj -> (Spawner) obj)
+                     .filter(spawner -> spawner.name.equals("PlayerSpawn"))
+                     .forEach(Spawner::spawn);
   }
 
   public void spawnGhosts ()
   {
-    gameState.layers.get(AdvGameState.Layer.ENTITIES.ordinal()).stream()
-                    .filter(obj -> obj instanceof Spawner)
-                    .map(obj -> (Spawner) obj)
-                    .filter(spawner -> spawner.type.name().equals("GHOST"))
-                    .forEach(Spawner::spawn);
+    gameState.objects.entities().stream()
+                     .filter(obj -> obj instanceof Spawner)
+                     .map(obj -> (Spawner) obj)
+                     .filter(spawner -> spawner.type.name().equals("GHOST"))
+                     .forEach(Spawner::spawn);
   }
 
   public void reloadLevelContent ()
@@ -613,27 +353,40 @@ public class GameEnvironment
 
     PrettyPrint.startGroup(PrettyPrint.Type.Message, "Reloading level");
 
-    gameState.layers.get(AdvGameState.Layer.OBJECTS.ordinal()).clear();
-    if (hardReset) gameState.layers.get(AdvGameState.Layer.ITEMS.ordinal()).clear();
-    gameState.layers.get(AdvGameState.Layer.ENTITIES.ordinal()).clear();
-    gameState.layers.get(AdvGameState.Layer.VFX.ordinal()).clear();
+    gameState.objects.clearLayer(AdvGameState.Layer.OBJECTS);
+    if (hardReset) gameState.objects.clearLayer(AdvGameState.Layer.ITEMS);
+    gameState.objects.clearLayer(AdvGameState.Layer.ENTITIES);
+    gameState.objects.clearLayer(AdvGameState.Layer.VFX);
+
     PrettyPrint.bullet("Cleared layers");
 
     gameState.players.clear();
     gameState.requestedDirections.clear();
-    if (hardReset){
+    if (hardReset)
+    {
       gameState.pelletCount = 0;
       gameState.pelletsEaten = 0;
       gameState.fruitSpawned = false;
     }
     PrettyPrint.bullet("Reset players and trackers");
 
+    switch (gameState.level)
+    {
+      case 5 ->
+      {
+        AdvGameConst.ghostSpeedBase = AdvGameConst.pacmanSpeedBase * 0.85;
+        PrettyPrint.bullet("Reached Lvl 5");
+        PrettyPrint.bullet("Increased ghost speed to "+0.85+"x Pacman");
+      }
+      default -> {}
+    }
+
     loadObjects();
     if (hardReset) loadItems();
     loadEntities();
     spawnPlayers();
     spawnGhosts();
-    if(hardReset) gameState.level++ ;
+    if (hardReset) gameState.level++;
     gameScreen.setLevel(gameState.level);
     gameScreen.gameReloading = true;
     PrettyPrint.bullet("Reloaded level contents");
